--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
     font-family: 'Roboto', Helvetica, sans-serif;
     color: white;
+    padding: 0;
+    margin: 0;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     background-color: #1f2973;
+}
+
+h1 {
 }
