--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
     padding: 0 300px;
 }
 
+h2 {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+h1 {
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
 }
@@ -27,4 +36,9 @@ a {
     display: flex;
     align-items: center;
     gap: 24px;
+}
+
+.content {
+    background-color: #1f2973;
+    margin: 0;
 }
