--- a/style.css
+++ b/style.css
@@ -20,13 +20,14 @@ h2 {
 
 h1 {
     margin: 0;
+    font-size: 48px;
 }
 
 ul {
     list-style-type: none;
 }
 
-a {
+.link, .subtext {
     text-decoration: none;
     color: #e5e7eb;
     font-size: 18px;
