--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #1f2973;
-    padding: 0 300px;
+    padding: 0 200px;
 }
 
 h2 {
@@ -43,7 +43,8 @@ ul {
     background-color: #1f2973;
     display: flex;
     justify-content: space-between;
-    padding: 0 300px;
+    gap: 64px;
+    padding: 0 200px;
     margin: 0;
 }
 
