--- a/style.css
+++ b/style.css
@@ -61,3 +61,9 @@ button {
     border: none;
     padding: 8px 32px;
 }
+
+.cards-title {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+}
