--- a/style.css
+++ b/style.css
@@ -79,8 +79,18 @@ button {
     justify-content: flex-end;
 }
 
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .image {
     width: 150px;
     height: 150px;
     border: 5px solid #3882f6;
+}
+
+.card-text {
+    color: grey;
 }
