--- a/style.css
+++ b/style.css
@@ -76,19 +76,22 @@ button {
 
 .cards {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    gap: 64px;
 }
 
 .card {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 160px;
 }
 
 .image {
     width: 150px;
     height: 150px;
     border: 5px solid #3882f6;
+    border-radius: 16px;
 }
 
 .card-text {
