--- a/style.css
+++ b/style.css
@@ -66,12 +66,14 @@ button {
     color: #1f2937;
     font-size: 36px;
     font-weight: bolder;
+    margin-top: 64px;
 }
 
 .second-content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 64px;
 }
 
 .cards {
