--- a/style.css
+++ b/style.css
@@ -104,17 +104,21 @@ button {
 
 .quote-section {
     background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    padding: 150px 550px;
 }
 
 .quote {
     color: #1f2937;
     font-size: 36px;
     font-style: italic;
-    font-weight: light;
+    font-weight: lighter;
 }
 
 .quote-author {
     color: #1f2937;
     font-size: 24px;
     font-weight: bolder;
+    margin-left: auto;
 }
