--- a/style.css
+++ b/style.css
@@ -126,6 +126,9 @@ button {
 .sign-up-section {
     background-color:#3882f6;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 100px 200px;
 }
 
 .sign-up {
