Added image to main content

--- a/style.css
+++ b/style.css
@@ -49,8 +49,9 @@ ul {
 }
 
 .content-image {
-    width: 500px;
-    background-color: grey;
+    width: 600px;
+    height: 300px;
+    object-fit: cover;
     flex: none;
 }
 
